--- a/templates/contratti.html
+++ b/templates/contratti.html
@@ -7,6 +7,11 @@
 {% set fab_title = "Carica Contratto" %}
 {% set fab_icon = "📄" %}
 
+{% block navbar %}
+    {% set title = "Contratti" %}
+    {% include 'components/ios_navbar.html' %}
+{% endblock %}
+
 {% block content %}
 <div class="ios-page">
     {% if contratti|length == 0 %}
